--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ Więcej na ten temat: https://cssreset.com/what-is-a-css-reset/
 body {
     margin: 0;
     padding: 0;
+	background-image: url(./images/background.svg);
+	background-attachment: fixed;
+	background-size: 100vw, 100vh;
 }
 
 h1, h2, h3 {
@@ -48,12 +51,12 @@ Więcej na ten temat: https://webaim.org/techniques/css/invisiblecontent/
 Sekcja pomocnicza, aby zwizualizować pozycje głównych bloków strony. Będzie usunięta w następnych krokach.
 */
 .page-header {
-    background-color: #ffb1b1;
+    /* background-color: #ffb1b1;*/
 }
 
 .page-content {
-    display: grid;
-	
+	display: grid;
+	grid-template-columns: repeat(1, minmax(250px, 1fr));
 }
 
 .page-footer {
@@ -61,15 +64,11 @@ Sekcja pomocnicza, aby zwizualizować pozycje głównych bloków strony. Będzie
 }
 
 .content-section {
-    background-color: #25072E;
-	min-height:100vh;
+
 }
 .content-section:nth-child(odd) {
-	height: 100%;
-    background-image: url(./images/background.svg);
-	display: grid;
-}
 
+}
 /*
 Koniec sekcji pomocniczej
 */
@@ -81,11 +80,13 @@ w tej samej pozycji względem okna przeglądarki.
 Natomiast pozycję tę ustawiamy za pomocą parametrów 'top', 'bottom', 'right', 'left'.
 */
 .page-header {
+    position: fixed;
     top: 50px;
     left: 50px;
 }
 
 .page-footer {
+    position: fixed;
     bottom: 50px;
     left: 50px;
 }
@@ -102,6 +103,8 @@ Właściwość "text-align: right" przykleja zawartość do prawej strony
 (oddziałuje na elementy, które są elementami inline'owymi, np. tekst, znaczniki <a>, <span> czy elementy z nadanym stylem "display: inline-block").
 */
 .page-content {
+    margin-left: 220px;
+    padding: 0 10%;
     text-align: right;
 }
 
@@ -116,16 +119,31 @@ która wymusza wysokość elementu na zadaną wartość lub wyższą.
 }
 .band-members {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	justify-items: center;
-	height:50vh;
-	width: 80vw;
-	
+	align-items: center;
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+	height: 100%;
 }
 .band-members__name {
-	text-align: center;
+	text-align: left;
+	font-size: 16px;
+	font-weight: bold;
+	color: #DBD8FB;
+	text-transform: uppercase;
+		
 }
-.band-members__desc{
-	text-align: center;
+.band-members__desc {
+	text-align: left;
+	color: #CCC8FF;
+	opacity: 0.5;
+	letter-spacing: 1.5px;
+	font-size: 13px;
+	font-family: OpenSans;
+}
+.page-navigation__items{
+	text-decoration: none!important;
+}
+.page-navigation__link{
+	text-decoration: none!important;
 }
 
