--- a/style.css
+++ b/style.css
@@ -24,6 +24,14 @@ h1, h2, h3 {
     margin: 0;
 }
 
+h2{
+	font-family: OpenSans;
+	font-weight: Bold;
+	font-size:	15px;
+	color: #EC008C;
+	text-transform: uppercase;
+}
+
 ul {
     list-style: none;
     margin: 0;
@@ -60,7 +68,7 @@ Sekcja pomocnicza, aby zwizualizować pozycje głównych bloków strony. Będzie
 }
 
 .page-footer {
-    background-color: #7ba3ff;
+    
 }
 
 .content-section {
@@ -140,10 +148,46 @@ która wymusza wysokość elementu na zadaną wartość lub wyższą.
 	font-size: 13px;
 	font-family: OpenSans;
 }
-.page-navigation__items{
-	text-decoration: none!important;
+
+
+#menu{
+	color: red;
+	text-decoration: none;
+	font-size: 13px;
+	font-weight: bold;
+	letter-spacing: 6.7px;
+	color: #EC008C;
+	opacity: 0.6;
+	text-transform: uppercase;
 }
-.page-navigation__link{
-	text-decoration: none!important;
+a.social-links__link{
+	color: #EC008C;
+	opacity: 0.6;
 }
+.social-links{
+	display: grid;
+	grid-template-rows: repeat(auto-fit)
+}
+.fa-facebook-square{
+	font-size: 16px;
+}
+.fa-instagram{
+	font-size: 16px;
+}
+.fa-lastfm{
+	font-size: 16px;
+}
+.fa-youtube{
+	font-size: 16px;
+}
+.concerts{
+  display: grid;
+  grid-auto-columns: 1fr;
+  grid-auto-rows: 1fr;
+  grid-template-areas:
+    "a b"
+    "c d";
+}
+
+
 
